--- a/clientes.html
+++ b/clientes.html
@@ -9,9 +9,9 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Home | Jarkol Tecnologies</title>
+	<title>Clients | Jarkol Tecnologies</title>
 	<link rel="shortcut icon" href="images/Logo_Jarkol_Symbol.ico">
-	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
@@ -45,16 +45,13 @@
 	<link rel="stylesheet" href="css/owl.theme.default.min.css">
 	<!-- Bootstrap  -->
 	<link rel="stylesheet" href="css/bootstrap.css">
-	<link rel="stylesheet" href="fonts.css">
+
 	<!-- Cards -->
 	<link rel="stylesheet" href="css/cards.css">
 	<link rel="stylesheet" href="css/style.css">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 
-
-	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script src="js/menu.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -64,55 +61,33 @@
 <body>
 	<header>
 		<div class="container">
-			<div class="fila">
-				<div class="col-lg-12 head"></div>
+			<div class="logo">
+				<img src="images/Logo_Jarkol_Symbol.webp">
 			</div>
-			<div class="fila">
-				<div class="col-lg-5">
-					<img id="logo" src="images/Logo_Jarkol_Symbol.webp">
+			<div class="titles">
 					<h1>JARKOL TECHNOLOGIES</h1>
 					<small>Servicios de Ingeniería y Tecnología</small>
-				</div>
-				<div class="col-lg-3"></div>
-				<div class="col-lg-1 lenguages">
-					<img src="images/USA.svg" height="20"> <span>|</span>
+			</div>
+			<div class="lenguages">
+					<img src="images/USA.svg" height="20"> <span>   |   </span>
 					<img src="images/mexico.png" height="20">
-				</div>
-				<div class="col-lg-3 menu_espacio">
-						<div class="boton-menu">
-							<a href="#"><span class="icon-menu"></span></a>
-						</div>
-				</div>
-				</div>
-			<div class="fila">
-				<div class="col-lg-12 espacio"></div>
 			</div>
 		</div>
-		<div class="container" id="menu">
-			<div class="fila">
-				<div class="col-lg-7" id="col_menu">
-					<div class="navegacion">
-						<nav>
-							<ul class="menu">
-								<li><a href="#">Principal</a></li>
-								<li><a href="#">Reserva una reunión</a></li>
-								<li><a href="#">Productos y Servicios</a></li>
-								<li><a href="#">Clientes</a></li>
-								<li><a href="#">Contacto</a></li>
-							</ul>
-						</nav>
-					</div>
-				</div>
-				<div class="col-lg-4">
-					<div id="cont">
-						<a href="#" id="correo">SALES@JARCOL.COM</a>
-						<a href="https://www.facebook.com/JarkolTech/"><span class="icon-facebook"></span></a>
-					</div>
-				</div>
-			</div>
+		<div id="cont">
+			<nav >
+				<ul id="menu">
+					<li><a href="index.html" type="button">Principal</a></li>
+					<li><a href="reservaciones.html" type="button">Reserva una reunión</a></li>
+					<li><a href="servicios.html" type="button">Productos y servicios</a></li>
+					<li><a href="clientes.html" type="button">Clientes</a></li>
+					<li><a href="contacto.html" type="button">Contacto</a></li>
+				</ul>
+			</nav>
+			<a href="#">
+				<font color="#000000">SALES@JARCOL.COM</font>
+			</a>
+			<a href="https://www.facebook.com/JarkolTech/"><img src="images/FB.png" alt="FB JARKOL" width="18" height="16"></a>
 		</div>
-	</header>
-	
-</body>
 
-</html>
+    </header>
+</body>
