--- a/reservaciones.html
+++ b/reservaciones.html
@@ -9,7 +9,8 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Voltage &mdash; 100% Free Fully Responsive HTML5 Template by FREEHTML5.co</title>
+	<title>Schedule a Meeting | Jarkol Tecnologies</title>
+	<link rel="shortcut icon" href="images/Logo_Jarkol_Symbol.ico">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
@@ -27,7 +28,6 @@
 	<meta name="twitter:card" content="" />
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-	<link rel="shortcut icon" href="favicon.ico">
 
 	<!-- Google Fonts -->
 	<link
@@ -48,37 +48,60 @@
 
 	<!-- Cards -->
 	<link rel="stylesheet" href="css/cards.css">
+	<link rel="stylesheet" href="css/style.css">
 	<!-- Modernizr JS -->
-    <script src="js/modernizr-2.6.2.min.js"></script>
+	<script src="js/modernizr-2.6.2.min.js"></script>
 
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
 	<![endif]-->
-
 </head>
 
 <body>
-	<div id="fh5co-page">
+	<header>
+		<div class="container">
+			<div class="logo">
+				<img src="images/Logo_Jarkol_Symbol.webp">
+			</div>
+			<div class="titles">
+					<h1>JARKOL TECHNOLOGIES</h1>
+					<small>Servicios de Ingeniería y Tecnología</small>
+			</div>
+			<div class="lenguages">
+					<img src="images/USA.svg" height="20"> <span>   |   </span>
+					<img src="images/mexico.png" height="20">
+			</div>
+		</div>
+		<div id="cont">
+			<nav >
+				<ul id="menu">
+					<li><a href="index.html" type="button">Principal</a></li>
+					<li><a href="reservaciones.html" type="button">Reserva una reunión</a></li>
+					<li><a href="servicios.html" type="button">Productos y servicios</a></li>
+					<li><a href="clientes.html" type="button">Clientes</a></li>
+					<li><a href="contacto.html" type="button">Contacto</a></li>
+				</ul>
+			</nav>
+			<a href="#">
+				<font color="#000000">SALES@JARCOL.COM</font>
+			</a>
+			<a href="https://www.facebook.com/JarkolTech/"><img src="images/FB.png" alt="FB JARKOL" width="18" height="16"></a>
+		</div>
+
+    </header>
+</body>
+
+
+
+
+////////////////////////////////////////////////////////////////////////////////////////////////////////////
+<div id="fh5co-page">
 		<nav class="fh5co-nav-style-1" role="navigation" data-offcanvass-position="fh5co-offcanvass-left">
 			<div class="container">
 				<div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 fh5co-logo">
 					<a href="#" class="js-fh5co-mobile-toggle fh5co-nav-toggle"><i></i></a>
 					<a href="#">Voltage</a>
-				</div>
-				<div class="col-lg-6 col-md-5 col-sm-5 text-center fh5co-link-wrap">
-					<ul data-offcanvass="yes">
-						<li class="active"><a href="#">Tour</a></li>
-						<li><a href="#">Explore</a></li>
-						<li><a href="#">Blog</a></li>
-						<li><a href="#">Pricing</a></li>
-					</ul>
-				</div>
-				<div class="col-lg-3 col-md-4 col-sm-4 text-right fh5co-link-wrap">
-					<ul class="fh5co-special" data-offcanvass="yes">
-						<li><a href="#">Login</a></li>
-						<li><a href="#" class="call-to-action">Get Started</a></li>
-					</ul>
 				</div>
 			</div>
 		</nav>
@@ -103,181 +126,52 @@
 									Far far away, behind the word mountains, far from the countries Vokalia and
 									Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right
 									at the coast of the Semantics.</h2>
-								<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a
-										href="http://freehtml5.co/" class="btn btn-primary btn-outline btn-lg">See Our
-										Work</a></p>
 							</div>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
-
-
+	</div>
 
 
 		<div class="fh5co-project-style-2">
 			<div class="container">
 				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
-						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Our Best
-							Projects</h2>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Far far away, behind the
-							word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-							Separated they live in Bookmarksgrove right at the coast of the Semantics.</p>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#"
-								class="btn btn-success btn-lg">Start your project</a></p>
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Nuestros Productos y Servicios</h2>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Lo último en tecnología</p>
 					</div>
-				</div>
-			</div>
-			<div class="fh5co-projects">
-				<ul>
-					<li class="wow fadeInUp" style="background-image: url(images/full_4.jpg);" data-wow-duration="1s"
-						data-wow-delay="1.4s" data-stellar-background-ratio="0.5">
-						<a href="#">
-							<div class="fh5co-overlay"></div>
-							<div class="container">
-								<div class="fh5co-text">
-									<div class="fh5co-text-inner">
-										<div class="row">
-											<div class="col-md-6">
-												<h3>Project Name #1</h3>
-											</div>
-											<div class="col-md-6">
-												<p>Far far away, behind the word mountains, far from the countries
-													Vokalia and Consonantia, there live the blind texts.</p>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</a>
-					</li>
-					<li class="wow fadeInUp" style="background-image: url(images/full_2.jpg);" data-wow-duration="1s"
-						data-wow-delay="1.7s" data-stellar-background-ratio="0.5">
-						<a href="#">
-							<div class="fh5co-overlay"></div>
-							<div class="container">
-								<div class="fh5co-text">
-									<div class="fh5co-text-inner">
-										<div class="row">
-											<div class="col-md-6">
-												<h3>Project Name #2</h3>
-											</div>
-											<div class="col-md-6">
-												<p>Far far away, behind the word mountains, far from the countries
-													Vokalia and Consonantia, there live the blind texts.</p>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</a>
-					</li>
-					<li class="wow fadeInUp" style="background-image: url(images/full_1.jpg);" data-wow-duration="1s"
-						data-wow-delay="2s" data-stellar-background-ratio="0.5">
-						<a href="#">
-							<div class="fh5co-overlay"></div>
-							<div class="container">
-								<div class="fh5co-text">
-									<div class="fh5co-text-inner">
-										<div class="row">
-											<div class="col-md-6">
-												<h3>Project Name #3</h3>
-											</div>
-											<div class="col-md-6">
-												<p>Far far away, behind the word mountains, far from the countries
-													Vokalia and Consonantia, there live the blind texts.</p>
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-						</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-
-		<div class="fh5co-blog-style-1">
-			<div class="container">
-				<div class="row p-b">
 					<div class="col-md-6 col-md-offset-3 text-center">
-						<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Recent From
-							Blog</h2>
-						<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Far far away, behind the
-							word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-						</p>
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Geotermia</h2>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Un enfoque integral</p>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Registros PTS en memoria y tiempo real</p>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#"
+									class="btn btn-success btn-lg">Contáctanos</a></p>
 					</div>
-				</div>
-				<div class="row p-b">
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12">
-						<div class="fh5co-post wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.1s">
-							<div class="fh5co-post-image">
-								<div class="fh5co-overlay"></div>
-								<div class="fh5co-category"><a href="#">Tutorial</a></div>
-								<img src="images/img_same_dimension_2.jpg" alt="Image" class="img-responsive">
-							</div>
-							<div class="fh5co-post-text">
-								<h3><a href="#">How to Create Cards</a></h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts...</p>
-							</div>
-							<div class="fh5co-post-meta">
-								<a href="#"><i class="icon-chat"></i> 33</a>
-								<a href="#"><i class="icon-clock2"></i> 2 hours ago</a>
-							</div>
-						</div>
+					<div class="col-md-6 col-md-offset-3 text-center">
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Sistemas de monitoreo de fondo</h2>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Precisión hasta lo más profundo</p>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Sensores de presión y temperatura.</p>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#"
+									class="btn btn-success btn-lg">Contáctanos</a></p>
 					</div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12">
-						<div class="fh5co-post wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.4s">
-							<div class="fh5co-post-image">
-								<div class="fh5co-overlay"></div>
-								<div class="fh5co-category"><a href="#">Health</a></div>
-								<img src="images/img_same_dimension_3.jpg" alt="Image" class="img-responsive">
-							</div>
-							<div class="fh5co-post-text">
-								<h3><a href="#">Drinking Ginger and Lemon Tea</a></h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts...</p>
-							</div>
-							<div class="fh5co-post-meta">
-								<a href="#"><i class="icon-chat"></i> 33</a>
-								<a href="#"><i class="icon-clock2"></i> 2 hours ago</a>
-							</div>
-						</div>
+					<div class="col-md-6 col-md-offset-3 text-center">
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Herramientas de registros y perforación direccional</h2>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">El camino al éxito</p>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Servicios de perforación direccional y herramientas MWD/LWD.</p>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#"
+									class="btn btn-success btn-lg">Contáctanos</a></p>
 					</div>
-					<div class="clearfix visible-sm-block"></div>
-					<div class="col-md-4 col-sm-6 col-xs-6 col-xxs-12">
-						<div class="fh5co-post wow fadeInLeft" data-wow-duration="1s" data-wow-delay="1.7s">
-							<div class="fh5co-post-image">
-								<div class="fh5co-overlay"></div>
-								<div class="fh5co-category"><a href="#">Tips</a></div>
-								<img src="images/img_same_dimension_4.jpg" alt="Image" class="img-responsive">
-							</div>
-							<div class="fh5co-post-text">
-								<h3><a href="#">4 Easy Steps to Create a Soup</a></h3>
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and
-									Consonantia, there live the blind texts...</p>
-							</div>
-							<div class="fh5co-post-meta">
-								<a href="#"><i class="icon-chat"></i> 33</a>
-								<a href="#"><i class="icon-clock2"></i> 2 hours ago</a>
-							</div>
-						</div>
-					</div>
-					<div class="clearfix visible-sm-block"></div>
-				</div>
-				<div class="row">
-					<div class="col-md-4 col-md-offset-4 text-center wow fadeInUp" data-wow-duration="1s"
-						data-wow-delay="2s">
-						<a href="#" class="btn btn-primary btn-lg">View All Post</a>
+					<div class="col-md-6 col-md-offset-3 text-center">
+							<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Consultoría Técnica</h2>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Un equipo de expertos</p>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay=".8s">Más de 15 años de experiencia técnica en operaciones tanto en tierra como en alta mar en la industria petrolera.</p>
+							<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="#"
+									class="btn btn-success btn-lg">Contáctanos</a></p>
 					</div>
 				</div>
 			</div>
-		</div>
-
-
 		<div class="fh5co-features-style-1" style="background-image: url(images/full_4.jpg);"
 			data-stellar-background-ratio="0.5">
 			<div class="fh5co-overlay"></div>
@@ -764,6 +658,6 @@
 	<!-- Main -->
 	<script src="js/main.js"></script>
 
-</body>
 
-</html>
+
+*/
