--- a/index.html
+++ b/index.html
@@ -94,18 +94,18 @@
 					<div class="navegacion">
 						<nav>
 							<ul class="menu">
-								<li><a href="#">Principal</a></li>
-								<li><a href="#">Reserva una reunión</a></li>
-								<li><a href="#">Productos y Servicios</a></li>
-								<li><a href="#">Clientes</a></li>
-								<li><a href="#">Contacto</a></li>
+								<li><a href="index.html">Principal</a></li>
+								<li><a href="reservaciones.html">Reserva una reunión</a></li>
+								<li><a href="servicios.html">Productos y Servicios</a></li>
+								<li><a href="clientes.html">Clientes</a></li>
+								<li><a href="contacto.html">Contacto</a></li>
 							</ul>
 						</nav>
 					</div>
 				</div>
 				<div class="col-lg-4">
 					<div id="cont">
-						<a href="#" id="correo">SALES@JARCOL.COM</a>
+						<a href="mailto:sales@jarkol.com" id="correo">SALES@JARCOL.COM</a>
 						<a href="https://www.facebook.com/JarkolTech/"><span class="icon-facebook"></span></a>
 					</div>
 				</div>
