--- a/servicios.html
+++ b/servicios.html
@@ -11,7 +11,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title>Products & Services | Jarkol Tecnologies</title>
 	<link rel="shortcut icon" href="images/Logo_Jarkol_Symbol.ico">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
 	<meta name="description" content="Free HTML5 Template by FREEHTML5.CO" />
 	<meta name="keywords" content="free html5, free template, free bootstrap, html5, css3, mobile first, responsive" />
 	<meta name="author" content="FREEHTML5.CO" />
@@ -52,6 +52,8 @@
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 
+	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+	<script src="js/menu.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -60,35 +62,54 @@
 
 <body>
 	<header>
-		<div class="container">
-			<div class="logo">
-				<img src="images/Logo_Jarkol_Symbol.webp">
-			</div>
-			<div class="titles">
-					<h1>JARKOL TECHNOLOGIES</h1>
-					<small>Servicios de Ingeniería y Tecnología</small>
-			</div>
-			<div class="lenguages">
-					<img src="images/USA.svg" height="20"> <span>   |   </span>
-					<img src="images/mexico.png" height="20">
-			</div>
-		</div>
-		<div id="cont">
-			<nav >
-				<ul id="menu">
-					<li><a href="index.html" type="button">Principal</a></li>
-					<li><a href="reservaciones.html" type="button">Reserva una reunión</a></li>
-					<li><a href="servicios.html" type="button">Productos y servicios</a></li>
-					<li><a href="clientes.html" type="button">Clientes</a></li>
-					<li><a href="contacto.html" type="button">Contacto</a></li>
-				</ul>
-			</nav>
-			<a href="#">
-				<font color="#000000">SALES@JARCOL.COM</font>
-			</a>
-			<a href="https://www.facebook.com/JarkolTech/"><img src="images/FB.png" alt="FB JARKOL" width="18" height="16"></a>
-		</div>
-
+			<div class="container">
+					<div class="fila">
+						<div class="col-lg-12 head"></div>
+					</div>
+					<div class="fila">
+						<div class="col-lg-5">
+							<img id="logo" src="images/Logo_Jarkol_Symbol.webp">
+							<h1>JARKOL TECHNOLOGIES</h1>
+							<small>Servicios de Ingeniería y Tecnología</small>
+						</div>
+						<div class="col-lg-3"></div>
+						<div class="col-lg-1 lenguages">
+							<img src="images/USA.svg" height="20"> <span>|</span>
+							<img src="images/mexico.png" height="20">
+						</div>
+						<div class="col-lg-3 menu_espacio">
+								<div class="boton-menu">
+									<a href="#"><span class="icon-menu"></span></a>
+								</div>
+						</div>
+						</div>
+					<div class="fila">
+						<div class="col-lg-12 espacio"></div>
+					</div>
+				</div>
+				<div class="container" id="menu">
+					<div class="fila">
+						<div class="col-lg-7" id="col_menu">
+							<div class="navegacion">
+								<nav>
+									<ul class="menu">
+										<li><a href="index.html">Principal</a></li>
+										<li><a href="reservaciones.html">Reserva una reunión</a></li>
+										<li><a href="servicios.html">Productos y Servicios</a></li>
+										<li><a href="clientes.html">Clientes</a></li>
+										<li><a href="contacto.html">Contacto</a></li>
+									</ul>
+								</nav>
+							</div>
+						</div>
+						<div class="col-lg-4">
+							<div id="cont">
+								<a href="mailto:sales@jarkol.com" id="correo">SALES@JARCOL.COM</a>
+								<a href="https://www.facebook.com/JarkolTech/"><span class="icon-facebook"></span></a>
+							</div>
+						</div>
+					</div>
+				</div>
 	</header>
 	<div id="fh5co-page">
 	
