--- a/clientes.html
+++ b/clientes.html
@@ -49,12 +49,12 @@
 	<!-- Cards -->
 	<link rel="stylesheet" href="css/cards.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/estilos.css">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script src="js/menu.js"></script>
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -62,54 +62,60 @@
 </head>
 
 <body>
-	<header>
-			<div class="container">
-					<div class="fila">
-						<div class="col-lg-12 head"></div>
-					</div>
-					<div class="fila">
-						<div class="col-lg-5">
-							<img id="logo" src="images/Logo_Jarkol_Symbol.webp">
-							<h1>JARKOL TECHNOLOGIES</h1>
-							<small>Servicios de Ingeniería y Tecnología</small>
-						</div>
-						<div class="col-lg-3"></div>
-						<div class="col-lg-1 lenguages">
-							<img src="images/USA.svg" height="20"> <span>|</span>
-							<img src="images/mexico.png" height="20">
-						</div>
-						<div class="col-lg-3 menu_espacio">
-								<div class="boton-menu">
-									<a href="#"><span class="icon-menu"></span></a>
-								</div>
-						</div>
-						</div>
-					<div class="fila">
-						<div class="col-lg-12 espacio"></div>
-					</div>
-				</div>
-				<div class="container" id="menu">
-					<div class="fila">
-						<div class="col-lg-7" id="col_menu">
-							<div class="navegacion">
-								<nav>
-									<ul class="menu">
-										<li><a href="index.html">Principal</a></li>
-										<li><a href="reservaciones.html">Reserva una reunión</a></li>
-										<li><a href="servicios.html">Productos y Servicios</a></li>
-										<li><a href="clientes.html">Clientes</a></li>
-										<li><a href="contacto.html">Contacto</a></li>
-									</ul>
-								</nav>
-							</div>
-						</div>
-						<div class="col-lg-4">
-							<div id="cont">
-								<a href="mailto:sales@jarkol.com" id="correo">SALES@JARCOL.COM</a>
-								<a href="https://www.facebook.com/JarkolTech/"><span class="icon-facebook"></span></a>
-							</div>
-						</div>
-					</div>
-				</div>
-    </header>
+	<div class="container clientes">
+		<div class="row clientes">
+			<div class="col-md-12 col-xs-12">
+				<section>
+					<h1>Nuestros clientes</h1>
+					<p>Estamos comprometidos con nuestros clientes, ayudándoles a guiarlos a través de las decisiones más difíciles y brindando nuestros servicios de consultoría a medida para establecerlos en el camino del éxito.</p>
+				</section>
+			</div>
+		</div>
+	</div>
+	<div class="container clients">
+		<div class="row">
+			<div class="col-md-2 img"></div>
+			<div class="col-md-3">
+				<img src="images/Singapore.webp" alt="Clients" class="img-cli">
+			</div>
+			<div class="col-md-7">
+					<p>Trabajamos con varias empresas de todo el mundo en la industria de la energía en asuntos complejos, enfocados en proyectos geotérmicos y de petróleo y gas. Después de algunas sesiones con nosotros, nuestros clientes han podido retomar el rumbo y experimentar los impactos duraderos de nuestros servicios.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-2 img"></div>
+			<div class="col-md-3">
+				<img src="images/pemex-logo.webp" alt="Clients" class="img-cli">
+			</div>
+			<div class="col-md-7">
+				<p>Pemex encontró en nuestra experiencia y soluciones tecnológicas a sus desafíos terrestres para las pruebas de pozos de producción en tiempo real y en memoria.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-2 img"></div>
+			<div class="col-md-3">
+				<img src="images/logo_CFE_2.png" alt="Clients" class="img-cli">
+			</div>
+			<div class="col-md-7">
+				<p>Recientemente, hemos trabajado con CFE en pozos geotérmicos complejos de alta presión y alta temperatura. Después de algunas sesiones con nosotros, CFE pudo volver a encarrilarse en sus proyectos geotérmicos que se registran en condiciones extremas y experimentar los impactos duraderos de nuestros servicios.</p>
+			</div>
+		</div>
+	</div>
+	<div class="container">
+		<div class="row contact">
+			<div class="col-md-4 col-xs-12 col-sm-12">
+				<h2>Síguenos</h2>
+				<div><a href="https://www.facebook.com/JarkolTech/"><span class="icon-facebook"></span></a></div>
+			</div>
+			<div class="col-md-4 col-xs-12 col-sm-12">
+				<h2>Contacto</h2>
+				<div><a href="mailto:sales@jarkol.com">sales@jarkol.com</a></div>
+			</div>
+			<div class="col-md-4 col-xs-12 col-sm-12">
+				<h2>Dirección</h2>
+				<h3>Villahermosa, Tabasco, México</h3>
+			</div>
+		</div>
+	</div>
+		<footer class="copyright hidden-xs">&#169; 2019 BY JARKOL TECHNOLOGIES S.A. DE C.V.</footer>
 </body>
