--- a/contacto.html
+++ b/contacto.html
@@ -49,11 +49,11 @@
 	<!-- Cards -->
 	<link rel="stylesheet" href="css/cards.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/estilos.css">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script src="js/menu.js"></script>
 	
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
@@ -62,88 +62,46 @@
 </head>
 
 <body>
-	<header>
-			<div class="container">
-					<div class="fila">
-						<div class="col-lg-12 head"></div>
-					</div>
-					<div class="fila">
-						<div class="col-lg-5">
-							<img id="logo" src="images/Logo_Jarkol_Symbol.webp">
-							<h1>JARKOL TECHNOLOGIES</h1>
-							<small>Servicios de Ingeniería y Tecnología</small>
-						</div>
-						<div class="col-lg-3"></div>
-						<div class="col-lg-1 lenguages">
-							<img src="images/USA.svg" height="20"> <span>|</span>
-							<img src="images/mexico.png" height="20">
-						</div>
-						<div class="col-lg-3 menu_espacio">
-								<div class="boton-menu">
-									<a href="#"><span class="icon-menu"></span></a>
-								</div>
-						</div>
-						</div>
-					<div class="fila">
-						<div class="col-lg-12 espacio"></div>
-					</div>
-				</div>
-				<div class="container" id="menu">
-					<div class="fila">
-						<div class="col-lg-7" id="col_menu">
-							<div class="navegacion">
-								<nav>
-									<ul class="menu">
-										<li><a href="index.html">Principal</a></li>
-										<li><a href="reservaciones.html">Reserva una reunión</a></li>
-										<li><a href="servicios.html">Productos y Servicios</a></li>
-										<li><a href="clientes.html">Clientes</a></li>
-										<li><a href="contacto.html">Contacto</a></li>
-									</ul>
-								</nav>
-							</div>
-						</div>
-						<div class="col-lg-4">
-							<div id="cont">
-								<a href="mailto:sales@jarkol.com" id="correo">SALES@JARCOL.COM</a>
-								<a href="https://www.facebook.com/JarkolTech/"><span class="icon-facebook"></span></a>
-							</div>
-						</div>
-					</div>
-				</div>
-	</header>
-	<div class="container contacto">
-		<div class="fila">
-			<div class="col-lg-6 mapa">
-					<iframe class="hidden-mobile" width="100%" height="500px" src="https://maps.google.com/maps?q=18.003222,-92.956861&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-					<iframe class="hidden-pc" width="100%" height="100px" src="https://maps.google.com/maps?q=18.003222,-92.956861&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+
+<div class="container contacto">
+		<div class="row">
+			<div class="col-md-6 mapa hidden-xs">
+					<iframe width="90%" height="550px" src="https://maps.google.com/maps?q=18.003222,-92.956861&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
 			</div>
-			<div class="col-lg-6 contacto">
-				<h1>Contáctanos</h1>
+			<div class="col-xs-12 mapa visible-xs">
+				<iframe width="80%" height="200px" src="https://maps.google.com/maps?q=18.003222,-92.956861&amp;t=&amp;z=16&amp;ie=UTF8&amp;iwloc=&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+			</div>
+			<div class="col-md-6 col-xs-12 contacto">
+				<h1 >Contáctanos</h1>
 				<div class="form_span">
 					<span>¿Tienes un desafío particular con el que te estás enfrentando actualmente? Contáctenos hoy y explore lo que podemos hacer por usted.</span>
 					<h2>Villahermosa, Tabasco, México</h2>
 				</div>
+				<a href="mailto:sales@jarkol.com">sales@jarkol.com</a>
 				<div>
-					<a href="mailto:sales@jarkol.com">sales@jarkol.com</a>
+					<a href="https://www.facebook.com/JarkolTech/"><span class="icon-facebook"></span></a>
+				
 				</div>
-				<a href="https://www.facebook.com/JarkolTech/"><span class="icon-facebook"></span></a>
 				<form action="mailto:aeap19980929@gmail.com" method="post" name="form">
 					<div class="form">
-						<div>
+						<div class="hidden-xs">
 							<input type="text" id="name" placeholder="Nombre*"/>
 							<input type="email" id="email" placeholder="Email*"/>
 						</div>
+						<div class="visible-xs">
+							<input type="text" id="name1" placeholder="Nombre*"/>
+							<input type="email" id="email1" placeholder="Email*"/>
+						</div>
 					</div>
 					<div class="form_email">
-						<input type="email" id="subject" placeholder="Asunto" />
+						<input type="subject" id="subject" placeholder="Asunto" />
 					</div>
 					<div class="form_textArea">
 						<textarea id="msg" placeholder="Mensaje"></textarea >
 					</div>
 					
 					<div class="button_form">
-						<button type="submit" id="enviar" onclick="validaciones()">Enviar</button>
+						<button type="submit" id="enviar">Enviar</button>
 						<div class="error"><p id="error"></p></div>
 					</div>
 				</form>
@@ -151,22 +109,22 @@
 		</div>
 	</div>
 	<div class="container">
-		<div class="fila contacto">
-			<div class="col-lg-4 ">
+		<div class="row contact">
+			<div class="col-md-4 col-xs-12 col-sm-12">
 				<h2>Síguenos</h2>
 				<div><a href="https://www.facebook.com/JarkolTech/"><span class="icon-facebook"></span></a></div>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-md-4 col-xs-12 col-sm-12">
 				<h2>Contacto</h2>
 				<div><a href="mailto:sales@jarkol.com">sales@jarkol.com</a></div>
 			</div>
-			<div class="col-lg-4">
+			<div class="col-md-4 col-xs-12 col-sm-12">
 				<h2>Dirección</h2>
 				<h3>Villahermosa, Tabasco, México</h3>
 			</div>
 		</div>
 	</div>
-		<footer class="copyright">&#169; 2019 BY JARKOL TECHNOLOGIES S.A. DE C.V.</footer>
+		<footer class="copyright hidden-xs">&#169; 2019 BY JARKOL TECHNOLOGIES S.A. DE C.V.</footer>
 	<script>
 	(function (){
     let formulario = document.getElementsByName('form')[0],
@@ -177,6 +135,9 @@
         if(formulario.name.value == 0){
 			e.preventDefault();
 			document.getElementById('name').focus()
+			document.getElementById('name').style.borderColor ='red';
+			document.getElementById('name1').focus()
+			document.getElementById('name1').style.borderColor ='red';
 			document.getElementById('error').innerHTML="Ingresa el nombre por favor"
         }
     }
@@ -184,6 +145,9 @@
         if(formulario.email.value == 0){
 			e.preventDefault();
 			document.getElementById('email').focus()
+			document.getElementById('email').style.borderColor ='red';
+			document.getElementById('email1').focus()
+			document.getElementById('email1').style.borderColor ='red';
 			document.getElementById('error').innerHTML="Ingresa el email por favor"
         }
     }
