--- a/servicios.html
+++ b/servicios.html
@@ -49,11 +49,12 @@
 	<!-- Cards -->
 	<link rel="stylesheet" href="css/cards.css">
 	<link rel="stylesheet" href="css/style.css">
+	<link rel="stylesheet" href="css/estilos.css">
 	<!-- Modernizr JS -->
 	<script src="js/modernizr-2.6.2.min.js"></script>
 
 	<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-	<script src="js/menu.js"></script>
+	
 	<!-- FOR IE9 below -->
 	<!--[if lt IE 9]>
 	<script src="js/respond.min.js"></script>
@@ -61,93 +62,18 @@
 </head>
 
 <body>
-	<header>
-			<div class="container">
-					<div class="fila">
-						<div class="col-lg-12 head"></div>
-					</div>
-					<div class="fila">
-						<div class="col-lg-5">
-							<img id="logo" src="images/Logo_Jarkol_Symbol.webp">
-							<h1>JARKOL TECHNOLOGIES</h1>
-							<small>Servicios de Ingeniería y Tecnología</small>
-						</div>
-						<div class="col-lg-3"></div>
-						<div class="col-lg-1 lenguages">
-							<img src="images/USA.svg" height="20"> <span>|</span>
-							<img src="images/mexico.png" height="20">
-						</div>
-						<div class="col-lg-3 menu_espacio">
-								<div class="boton-menu">
-									<a href="#"><span class="icon-menu"></span></a>
-								</div>
-						</div>
-						</div>
-					<div class="fila">
-						<div class="col-lg-12 espacio"></div>
-					</div>
-				</div>
-				<div class="container" id="menu">
-					<div class="fila">
-						<div class="col-lg-7" id="col_menu">
-							<div class="navegacion">
-								<nav>
-									<ul class="menu">
-										<li><a href="index.html">Principal</a></li>
-										<li><a href="reservaciones.html">Reserva una reunión</a></li>
-										<li><a href="servicios.html">Productos y Servicios</a></li>
-										<li><a href="clientes.html">Clientes</a></li>
-										<li><a href="contacto.html">Contacto</a></li>
-									</ul>
-								</nav>
-							</div>
-						</div>
-						<div class="col-lg-4">
-							<div id="cont">
-								<a href="mailto:sales@jarkol.com" id="correo">SALES@JARCOL.COM</a>
-								<a href="https://www.facebook.com/JarkolTech/"><span class="icon-facebook"></span></a>
-							</div>
-						</div>
-					</div>
-				</div>
-	</header>
-	<div id="fh5co-page">
-	
-			<div class="fh5co-cover fh5co-cover-style-2 js-full-height" data-stellar-background-ratio="0.5" data-next="yes"
-				style="background-image: url(images/full_1.jpg);">
-				<span class="scroll-btn wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.4s">
-					<a href="#">
-						<span class="mouse"><span></span></span>
-					</a>
-				</span>
-				<div class="fh5co-overlay"></div>
-				<div class="fh5co-cover-text">
-					<div class="container">
-						<div class="row">
-							<div class="col-md-push-6 col-md-6 full-height js-full-height">
-								<div class="fh5co-cover-intro">
-									<h1 class="cover-text-lead wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">
-										Catálogo de Productos</h1>
-									<p class="wow fadeInUp" data-wow-duration="1s" data-wow-delay="1.1s"><a href="http://freehtml5.co/" class="btn btn-primary btn-outline btn-lg">Descubrir</a></p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-	
-	
-			<div class="fh5co-project-style-2 colors">
-				<div class="container">
-					<div class="row p-b">
-						<div class="col-md-6 col-md-offset-3 text-center">
-								<h2 class="fh5co-heading wow fadeInUp" data-wow-duration="1s" data-wow-delay=".5s">Nuestros Productos y Servicios</h2>
-                                <p class="wow fadeInUpS" data-wow-duration="1s" data-wow-delay=".8s">The Cutting Edge</p>
-                                <p class="wow fadeInUpS" data-wow-duration="1s" data-wow-delay=".8s">We offer a variety of services to all of our clients, customized to fit their specific needs. Are you a large corporation looking for a step-by-step plan of action? Or, are you are a small startup just beginning your business? No matter what your needs are, Jarkol Technologies is here to provide you guidance every step of the way. Take a look below to see what we can do for you.</p>
-                        </div>
-                        
-                    </div>
-                </div>
-            </div>
+	<p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Amet veritatis aliquid mollitia excepturi. Consequuntur molestias, id distinctio deserunt sed nemo illo ea sit sint, ipsa eveniet asperiores saepe deleniti doloremque.</p>	
+	<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam dolorem fuga odit iure reiciendis dolor enim impedit repellat fugiat quidem omnis id mollitia aspernatur, voluptas suscipit, similique unde, repellendus beatae.</p>
+<section class="banner-1">
+	<h3>Catálogo de Productos</h3>
+</section>
+<div class="container servicios">
+	<div class="row">
+		<div class="col-md-12">
+			<h2>Nuestros Productos y Servicios</h2>
+            <p>The Cutting Edge</p>
+            <p>Ofrecemos una variedad de servicios a todos nuestros clientes, personalizados para satisfacer sus necesidades específicas. ¿Eres una gran empresa que busca un plan de acción paso a paso? O, ¿eres una pequeña empresa que recién comienza tu negocio? No importa cuáles sean sus necesidades, Jarkol Technologies está aquí para brindarle orientación en cada paso del camino. Eche un vistazo a continuación para ver qué podemos hacer por usted.</p>
         </div>
-    </body>
+    </div>
+</div>
+</body>
