Estructura del proyecto y seccion de contacto

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
       </div>
       <div class="social-links float-left d-none d-sm-block d-xs-block">
         <a href="#" class="linkedin" style="visibility: hidden"><i class="fa fa-linkedin"></i></a>
-        <a href="#" class="facebook"><i class="fa fa-facebook"></i></a>
+        <a href="https://www.facebook.com/Jarkol-Technologies-116224989010437/" class="facebook"><i
+            class="fa fa-facebook"></i></a>
       </div>
       <div class="social-links float-right d-none d-lg-block d-md-block">
         <a href="#" class="linkedin"><img width="20px" src="img/USA.svg" alt="" title="" /></a>
@@ -96,7 +97,7 @@
       <h2>Jarkol Technologies</h2>
 
       <div>
-        <a href="#about" class="btn-get-started scrollto">Experts in horizontal well logging.</a>
+        <a href="#about" class="btn-get-started scrollto">TECHNOLOGY & ENGINEERING SERVICES</a>
       </div>
     </div>
 
@@ -124,13 +125,14 @@
 
           <div class="col-lg-6 content">
             <h2>Our Products and Services</h2>
-            <h3>The Cutting Edge</h3>
+            <h4>Experts in horizontal well logging.</h4>
             <ul>
-              <li><i class="ion-android-checkmark-circle"></i>Geothermal
+              <li><i class="ion-android-checkmark-circle"></i> <strong>Geothermal</strong>
               </li>
-              <li><i class="ion-android-checkmark-circle"></i> Downhole Monitoring Systems</li>
-              <li><i class="ion-android-checkmark-circle"></i> Directional Drilling and Logging Tools</li>
-              <li><i class="ion-android-checkmark-circle"></i> Technical Consultancy</li>
+              <li><i class="ion-android-checkmark-circle"></i> <strong>Downhole Monitoring Systems</strong></li>
+              <li><i class="ion-android-checkmark-circle"></i> <strong>Directional Drilling and Logging Tools</strong>
+              </li>
+              <li><i class="ion-android-checkmark-circle"></i> <strong>Technical Consultancy</strong></li>
 
 
 
@@ -152,7 +154,8 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h2 class="cta-title">About Us</h2>
-            <p class="cta-text">From tackling personal decisions to reaching important milestones, our job is to guide you on the path of
+            <p class="cta-text">From tackling personal decisions to reaching important milestones, our job is to guide
+              you on the path of
               success. As professional Engineering Consultants, we guarantee great results.</p>
             <p class="cta-text">We are a service company for the Energy and Extraction Industry, with direct experience
               in Oil and Gas,
@@ -227,7 +230,7 @@
       <div class="container">
         <div class="section-header">
           <h2>Products & Services</h2>
-          <em>The Cutting Edge</em>
+          <h3>The Cutting Edge</h3>
           <p>We offer a variety of services to all of our clients, customized to fit their specific needs. Are you a
             large corporation looking for a step-by-step plan of action? Or, are you are a small startup just beginning
             your business? No matter what your needs are, Jarkol Technologies is here to provide you guidance every step
@@ -507,35 +510,89 @@
       Contact Section
     ============================-->
     <section id="contact" class="wow fadeInUp">
-      <div class="container">
-        <div class="section-header">
-          <h2>Contact Us</h2>
-          <p>Do you have a particular challenge you are currently dealing with? Contact us today and explore what we can
-            do for you.</p>
+
+
+      <div class="container mb-4">
+
+        <div class="row">
+
+          <div class="col-xs-12 col-sm-12 col-md-6">
+
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3794.501405722098!2d-92.94666701860963!3d18.00191948616859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85edd78d5d98eca3%3A0x8ceecfb8de237916!2sTABASCO+2000!5e0!3m2!1sen!2sbg!4v1560976615219!5m2!1sen!2sbg"
+              width="100%" height="410" frameborder="0" style="border:0" allowfullscreen></iframe>
+            <br>
+            <br>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-6">
+            <div class="container">
+              <div class="section-header">
+                <h2>Contact Us</h2>
+                <p>Do you have a particular challenge you are currently dealing with? Contact us today and explore what
+                  we can
+                  do for you.</p>
+              </div>
+            </div>
+            <div class="form">
+              <div id="sendmessage">Your message has been sent. Thank you!</div>
+              <div id="errormessage"></div>
+              <form action="" method="post" role="form" class="contactForm">
+                <div class="form-row">
+                  <div class="form-group col-md-6">
+                    <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
+                      data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
+                    <div class="validation"></div>
+                  </div>
+                  <div class="form-group col-md-6">
+                    <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
+                      data-rule="email" data-msg="Please enter a valid email" />
+                    <div class="validation"></div>
+                  </div>
+                </div>
+                <div class="form-group">
+                  <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
+                    data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
+                  <div class="validation"></div>
+                </div>
+                <div class="form-group">
+                  <textarea class="form-control" name="message" rows="5" data-rule="required"
+                    data-msg="Please write something for us" placeholder="Message"></textarea>
+                  <div class="validation"></div>
+                </div>
+                <div class="text-center"><button type="submit">Send Message</button></div>
+              </form>
+              <br>
+            </div>
+
+          </div>
         </div>
+      </div>
+      <hr>
+      <div class="container">
 
         <div class="row contact-info">
 
           <div class="col-md-4">
             <div class="contact-address">
-              <i class="ion-ios-location-outline"></i>
-              <h3>Dirección</h3>
+              <i class="fa fa-map-marker"></i>
+              <h3>Address</h3>
               <address>Villahermosa, Tabasco, México</address>
             </div>
           </div>
-
+          <a class="facebook"></a>
           <div class="col-md-4">
             <div class="contact-phone">
-              <i class="ion-ios-telephone-outline"></i>
-              <h3>Síguenos</h3>
-              <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+              <i class="fa fa-facebook"></i>
+              <h3>Follow Us</h3>
+              <p><a href="https://www.facebook.com/Jarkol-Technologies-116224989010437/">Jarkol Technologies SA de
+                  CV</a></p>
             </div>
           </div>
 
           <div class="col-md-4">
             <div class="contact-email">
-              <i class="ion-ios-email-outline"></i>
-              <h3>Contacto</h3>
+              <i class="fa fa-envelope-o"></i>
+              <h3>Contact Us</h3>
               <p><a href="mailto:sales@jarkol.com"> sales@jarkol.com
                 </a></p>
             </div>
@@ -544,45 +601,7 @@
         </div>
       </div>
 
-      <div class="container mb-4">
-        <iframe
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3794.501405722098!2d-92.94666701860963!3d18.00191948616859!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85edd78d5d98eca3%3A0x8ceecfb8de237916!2sTABASCO+2000!5e0!3m2!1sen!2sbg!4v1560976615219!5m2!1sen!2sbg"
-          width="100%" height="380" frameborder="0" style="border:0" allowfullscreen></iframe>
 
-      </div>
-
-      <div class="container">
-        <div class="form">
-          <div id="sendmessage">Your message has been sent. Thank you!</div>
-          <div id="errormessage"></div>
-          <form action="" method="post" role="form" class="contactForm">
-            <div class="form-row">
-              <div class="form-group col-md-6">
-                <input type="text" name="name" class="form-control" id="name" placeholder="Your Name"
-                  data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
-                <div class="validation"></div>
-              </div>
-              <div class="form-group col-md-6">
-                <input type="email" class="form-control" name="email" id="email" placeholder="Your Email"
-                  data-rule="email" data-msg="Please enter a valid email" />
-                <div class="validation"></div>
-              </div>
-            </div>
-            <div class="form-group">
-              <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject"
-                data-rule="minlen:4" data-msg="Please enter at least 8 chars of subject" />
-              <div class="validation"></div>
-            </div>
-            <div class="form-group">
-              <textarea class="form-control" name="message" rows="5" data-rule="required"
-                data-msg="Please write something for us" placeholder="Message"></textarea>
-              <div class="validation"></div>
-            </div>
-            <div class="text-center"><button type="submit">Send Message</button></div>
-          </form>
-        </div>
-
-      </div>
     </section><!-- #contact -->
 
   </main>
