--- a/index.html
+++ b/index.html
@@ -5,8 +5,18 @@
   <meta charset="utf-8">
   <title>Home | Jarkol Technologies</title>
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  <meta content="" name="keywords">
-  <meta content="" name="description">
+  <link rel="canonical" href="index.html" />
+  <meta property="og:title" content="Home | Jarkol Technologies" />
+  <meta property="og:url" content="http://www.jarkol.esy.es/" />
+  <meta property="og:image" content="http://www.jarkol.esy.es/img/im03.png" />
+  <meta property="og:site_name" content="website" />
+  <meta property="og:type" content="website" />
+  <meta name="author" content="Jarkol" />
+  <meta name="keywords"
+    content="Engineering, Services, Ingeniería, Technology, Tecnología, jarckol, Jarkol Jarcol, pozos, Geotermia" />
+
+  <meta name="description"
+    content="Más de 15 años de experiencia técnica en operaciones tanto en tierra como en alta mar en la industria petrolera" />
 
   <!-- Favicons -->
   <link href="img/favicon.png" rel="icon">
