--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@
 
       <nav id="nav-menu-container">
         <ul class="nav-menu">
-          <li class="menu-active"><a href="#body">Inicio</a></li>
-          <li><a href="#about">Acerca de</a></li>
-          <li><a href="#portfolio">Services</a></li>
-          <li><a href="#contact">Contacto</a></li>
+          <li class="menu-active"><a href="#body">Home</a></li>
+          <li><a href="#about">About Us</a></li>
+          <li><a href="#portfolio"> Products & Services</a></li>
+          <li><a href="#contact">Contact</a></li>
         </ul>
       </nav><!-- #nav-menu-container -->
     </div>
@@ -98,10 +98,10 @@
   <section id="intro">
 
     <div class="intro-content">
-      <h2>Jarkol Technologies</h2>
+      <h2><strong>JARKOL TECHNOLOGIES</strong></h2>
 
       <div>
-        <a href="#about" class="btn-get-started scrollto">TECHNOLOGY & ENGINEERING SERVICES</a>
+        <a href="#about" class="btn-get-started scrollto"><small><strong>TECHNOLOGY & ENGINEERING SERVICES</strong></small></a>
       </div>
     </div>
 
@@ -170,7 +170,7 @@
               accesible technologies in the Latin American market.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
-            <a class="cta-btn align-middle" href="#">Get in Touch</a>
+            <a class="cta-btn align-middle" href="#contact">Get in Touch</a>
           </div>
         </div>
 
