Corrigiendo mision y vision

--- a/index.html
+++ b/index.html
@@ -177,18 +177,16 @@
             <div class="box wow fadeInRight">
               <div class="icon"><i class="fa fa-cogs"></i></div>
               <h4 class="title"><a href="">Mission</a></h4>
-              <p class="description">To become one of the leading Mexican companies boosting the development of
-                technology and strategical tools for the Energy Industry in Mexico and Latin America.</p>
+              <p class="description">To provide, Import and develop technology for the Oil and Gas, Geothermal and Mining industry in the
+                Mexican Market in order to promote and boost competitiveness.</p>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-eye"></i></div>
               <h4 class="title"><a href="">Vission</a></h4>
-              <p class="description">​
-
-                To provide, Import and develop technology for the Oil and Gas, Geothermal and Mining industry in the
-                Mexican Market in order to promote and boost competitiveness.</p>
+              <p class="description">​To become one of the leading Mexican companies boosting the development of
+                technology and strategical tools for the Energy Industry in Mexico and Latin America.</p>
             </div>
           </div>
 
