Translate terminado(excepto movil), pdf agregado

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
       </div>
       <div class="social-links float-right d-none d-lg-block d-md-block">
         <p>
-          <a class="btn btn-default lang_selector trn" href="#" role="button" data-value="en">translate to English</a>
-          <a class="btn btn-default lang_selector trn" href="#" role="button"  data-value="es">translate to Spanish</a>
+          <a class="btn btn-default lang_selector trn" href="#" role="button" data-value="en"><img src="img/USA.svg" height="20" alt=""></a>
+          <a class="btn btn-default lang_selector trn" href="#" role="button"  data-value="es"><img src="img/mexico.png" height="20" alt=""></a>
         </p>
       </div>
     </div>
@@ -87,9 +87,15 @@
         <ul class="nav-menu">
           <li class="menu-active"><a href="#body" class="trn">Home</a></li>
           <li><a href="#about" class="trn">About Us</a></li>
-          <li><a href="#portfolio" class="trn"> Products & Services</a></li>
+          <li><a href="#portfolio" class="trn" id="prod">Products & Services</a></li>
           <li><a href="#contact" class="trn">Contact</a></li>
         </ul>
+        <div class="social-links float-center d-md-none d-lg-none">
+            <p>
+              <a class="btn btn-default lang_selector trn" href="#" role="button" data-value="en"><img src="img/USA.svg" height="20" alt=""></a>
+              <a class="btn btn-default lang_selector trn" href="#" role="button"  data-value="es"><img src="img/mexico.png" height="20" alt=""></a>
+            </p>
+          </div>
       </nav><!-- #nav-menu-container -->
     </div>
   </header><!-- #header -->
@@ -103,7 +109,7 @@
       <h2 class="trn"><strong>JARKOL TECHNOLOGIES</strong></h2>
 
       <div>
-        <a href="#about" class="btn-get-started scrollto"><small class="trn"><strong>TECHNOLOGY & ENGINEERING SERVICES</strong></small></a>
+        <a href="#about" class="btn-get-started scrollto"><small><strong id="tec">TECHNOLOGY & ENGINEERING SERVICES</strong></small></a>
       </div>
     </div>
 
@@ -161,12 +167,8 @@
         <div class="row">
           <div class="col-lg-9 text-center text-lg-left">
             <h2 class="cta-title trn">About Us</h2>
-            <p class="cta-text trn">From tackling personal decisions to reaching important milestones, our job is to guide
-              you on the path of success. As professional Engineering Consultants, we guarantee great results.</p>
-            <p class="cta-text trn">We are a service company for the Energy and Extraction Industry, with direct experience
-              in Oil and Gas, Mining and Geothermal, particularly in drilling operations, geophysical logging with both wireline and
-              while drilling tools and production parameters monitoring, focused on the introduction of new, better and more
-              accesible technologies in the Latin American market.</p>
+            <p class="cta-text trn">From tackling personal decisions to reaching important milestones, our job is to guide you on the path of success. As professional Engineering Consultants, we guarantee great results.</p>
+            <p class="cta-text trn">We are a service company for the Energy and Extraction Industry, with direct experience in Oil and Gas, Mining and Geothermal, particularly in drilling operations, geophysical logging with both wireline and while drilling tools and production parameters monitoring, focused on the introduction of new, better and more accesible technologies in the Latin American market.</p>
           </div>
           <div class="col-lg-3 cta-btn-container text-center">
             <a class="cta-btn align-middle trn" href="#contact">Get in Touch</a>
@@ -186,16 +188,14 @@
             <div class="box wow fadeInRight">
               <div class="icon"><i class="fa fa-cogs"></i></div>
               <h4 class="title"><a href="" class="trn">Mission</a></h4>
-              <p class="description trn">To provide, Import and develop technology for the Oil and Gas, Geothermal and Mining industry in the
-                Mexican Market in order to promote and boost competitiveness.</p>
+              <p class="description trn">To provide, Import and develop technology for the Oil and Gas, Geothermal and Mining industry in the Mexican Market in order to promote and boost competitiveness.</p>
             </div>
           </div>
           <div class="col-lg-6">
             <div class="box wow fadeInLeft">
               <div class="icon"><i class="fa fa-eye"></i></div>
               <h4 class="title"><a href="" class="trn">Vission</a></h4>
-              <p class="description trn">​To become one of the leading Mexican companies boosting the development of
-                technology and strategical tools for the Energy Industry in Mexico and Latin America.</p>
+              <p class="description trn" id="vision">​To become one of the leading Mexican companies boosting the development of technology and strategical tools for the Energy Industry in Mexico and Latin America.</p>
             </div>
           </div>
 
@@ -212,9 +212,7 @@
         <div class="section-header">
           <h2 class="trn">Clients</h2>
           <h3></h3>
-          <p class="trn">We work with several companies from around the world in the Energy industry on complex matters, focused on
-            Geothermal and Oil and Gas projects. After a few sessions with us, our clients have been able to get back on
-            track and experience the long lasting impacts of our services.</p>
+          <p class="trn">We work with several companies from around the world in the Energy industry on complex matters, focused on Geothermal and Oil and Gas projects. After a few sessions with us, our clients have been able to get back on track and experience the long lasting impacts of our services.</p>
         </div>
 
         <div class="owl-carousel clients-carousel">
@@ -231,12 +229,9 @@
     <section id="portfolio" class="wow fadeInUp">
       <div class="container">
         <div class="section-header">
-          <h2 class="trn">Products & Services</h2>
+          <h2 class="trn" id="prod">Products & Services</h2>
           <h3 class="trn">The Cutting Edge</h3>
-          <p class="trn">We offer a variety of services to all of our clients, customized to fit their specific needs. Are you a
-            large corporation looking for a step-by-step plan of action? Or, are you are a small startup just beginning
-            your business? No matter what your needs are, Jarkol Technologies is here to provide you guidance every step
-            of the way. Take a look below to see what we can do for you.</p>
+          <p class="trn">We offer a variety of services to all of our clients, customized to fit their specific needs. Are you a large corporation looking for a step-by-step plan of action? Or, are you are a small startup just beginning your business? No matter what your needs are, Jarkol Technologies is here to provide you guidance every step of the way. Take a look below to see what we can do for you.</p>
         </div>
       </div>
 
@@ -256,7 +251,7 @@
             </div>
           </div>
 
-          <div class="col-lg-3<script src="js/bootstrap.min.js"></script> col-md-4">
+          <div class="col-lg-3 col-md-4">
             <div class="portfolio-item wow fadeInUp">
               <a href="img/portfolio/2.jpg" class="portfolio-popup">
                 <img src="img/portfolio/2.jpg" alt="">
@@ -351,7 +346,11 @@
 
       </div>
     </section><!-- #portfolio -->
-
+    <section id="clients" class="wow fadeInUp">
+        <div class="container pdf">
+        <a href="productos&servicios.pdf" type="button" class="pdf-btn trn">Discover</a>
+      </div>
+    </section>
     <!--==========================
       Testimonials Section
     ============================-->
@@ -505,6 +504,7 @@
           </div>
         </div>
 
+            <script src="js/bootstrap.min.js"></script
       </div>
     </section> #team -->
 
@@ -530,8 +530,7 @@
             <div class="container">
               <div class="section-header">
                 <h2 class="trn">Contact Us</h2>
-                <p class="trn">Do you have a particular challenge you are currently dealing with? Contact us today and explore what
-                  we can do for you.</p>
+                <p class="trn">Do you have a particular challenge you are currently dealing with? Contact us today and explore what we can do for you.</p>
               </div>
             </div>
             <div class="form">
@@ -622,10 +621,8 @@
   <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
   <!-- JavaScript Libraries -->
+  
   <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-  <script src="translatejs/jquery.translate.js"></script>
-  <script src="translatejs/main.js"></script>
-  <script src="translatejs/js/bootstrap.min.js"></script>
   <script src="lib/jquery/jquery.min.js"></script>
   <script src="lib/jquery/jquery-migrate.min.js"></script>
   <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -636,7 +633,8 @@
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
   <script src="lib/magnific-popup/magnific-popup.min.js"></script>
   <script src="lib/sticky/sticky.js"></script>
-
+  <script src="translatejs/jquery.translate.js"></script>
+  <script src="translatejs/main.js"></script>
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
 
