Unificación de botones

--- a/index.html
+++ b/index.html
@@ -347,7 +347,7 @@
     <section id="clients" class="wow fadeInUp">
         <div class="container pdf">
             <div>
-                <a href="productos&servicios.pdf" target="_blank" class="pdf-btn"><small><strong class="trn">Discover</strong></small></a>
+                <a href="productos&servicios.pdf" target="_blank" class="pdf-btn trn">Discover</a>
             </div>
       </div>
     </section>
@@ -560,7 +560,7 @@
                   <div class="validation"></div>
                 </div>
                 <div class="msg">
-                    <button type="submit" class="text-center pdf-btn"><small><strong class="trn">Send Message</strong></small></button>
+                    <button type="submit" style="-webkit-appearance: caret; border-radius: 3px" class="text-center pdf-btn trn"> Send Message</button>
                 </div>
               </form>
               <br>
